yaml-parse/resources/curl1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: curl
      image: nginx
      command: ["sleep", "9222299"]
